# playdate-slots

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
Source/: battles.json
source/: battle.c  battle.h  game.c  game.h  inventory.c  inventory.h  main.c  slots.c  slots.h  utils.c  utils.h
